apps/gitea/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - image: gitea/gitea:latest
          name: gitea           
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 22
              protocol: TCP
          resources:
            limits:
              cpu: "0.1"
              memory: "1G"
          volumeMounts:
            - mountPath: /data
              name: gitea
              subPath: 7797b859-3356-4aa6-90e0-71ae175836c6
      restartPolicy: Always
      volumes:
        - name: gitea
          persistentVolumeClaim:
            claimName: gitea-pvc
