apps/gitea/base/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: server
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
  selector:
    app: gitea
status:
  loadBalancer: {}
