apps/gitea/base/gitea-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - web-front
    - websecure-front
    - web-local
    - websecure-local
  routes:
  - match: Host(`gitea.steffenillium.de`)
    kind: Rule
    services:
    - name: gitea
      port: 80
