apps/gitea/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure-front
    - websecure-local
  tls: {}
  routes:
  - match: Host(`gitea.steffenillium.de`)
    kind: Rule
    services:
    - name: gitea
      port: http
